test_suite/tests/ui/pass/arg_slice_type.rs
use clapi::macros::*;

#[command]
#[arg(slice)]
fn test(slice: &[u32]){}

fn main(){}