test_suite/tests/ui/fail/invalid_arg_count_in_array/invalid_arg_array_min_max.rs
use clapi::macros::*;

#[command]
#[arg(values, min=0, max=3)]
fn test(values: [u32; 3]){}

fn main(){}